# challenge-backend

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  run_backend.sh
migrations/2024-05-11-154603_create_auth/: up.sql
migrations/2024-05-11-154605_create_note/: down.sql  up.sql
migrations/2024-05-11-154618_create_category/: up.sql
migrations/2024-05-11-154753_create_note_has_category/: down.sql  up.sql
postman/: PostmanCollection.json
src/: db.rs  main.rs  schema.rs
src/catchers/: error_catcher.rs  mod.rs
src/controllers/: auth_controller.rs  category_controller.rs  mod.rs  note_controller.rs
src/guards/: token.rs
src/models/: auth_model.rs  category_model.rs  mod.rs  note_model.rs
src/models/api/: auth_crud_model.rs  category_crud_model.rs  mod.rs  note_crud_model.rs  response_model.rs
src/services/: auth_service.rs  category_service.rs  mod.rs  note_service.rs
src/validators/: mod.rs  regex_validators.rs
