[package]
name = "quickest-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version ="0.5.0", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2", "numeric"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
rocket-validation = "0.2.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde_derive = "1.0"
jsonwebtoken = "9.3.0"
pwhash = "1"